# python-rabbitmq-demo

./: .env.example  README.md  pyproject.toml
app/: rabbitmq.py  server.py
app/notifications/: memory_store.py  models.py  producer.py  routes.py  services.py
app/notifications/consumers/: dlq_consumer.py  entry_consumer.py  retry_consumer.py  validation_consumer.py
tests/: test_dlq_consumer.py  test_entry_consumer.py  test_producer.py  test_retry_consumer.py  test_validation_consumer.py
