[project]
name = "python-rabbitmq-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aio-pika",
    "loguru",
    "uuid",
    "pytest",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
pythonpath = ["."]
